# bci2000

./: .gitignore  compile_commands.json  install  install_dependencies
src/contrib/AppConnectorApplications/SimpleExample/: CMakeLists.txt  SimpleExample.cpp
src/private/: CMakeLists.txt  PrivateConfig.cmake
src/private/Application/: CMakeLists.txt
src/private/Application/AnnaRaymondTask/: AnnaRaymondStoryTask.cpp  AnnaRaymondStoryTask.h  CMakeLists.txt  Instruction for Raymond Story_psypy3.docx  myImageStimulus.cpp  myImageStimulus.h  myStimulus.h  myTextStimulus.cpp  myTextStimulus.h  wavePlayerStimulus.cpp  wavePlayerStimulus.h
src/private/Application/AttentionTask/: AttentionTask.cpp  AttentionTask.h  CMakeLists.txt  Cursor.cpp  Cursor.h
src/private/Application/BB8Control/: BB8ControlTask.cpp  BB8ControlTask.h  CMakeLists.txt
src/private/Application/CenterOut/: CMakeLists.txt  CenterOutFeedbackTask.cpp  CenterOutFeedbackTask.h  CursorFeedbackTask.cpp  CursorFeedbackTask.h  FeedbackScene.h  FeedbackScene2D.cpp  FeedbackScene2D.h  FeedbackScene3D.cpp  FeedbackScene3D.h  StimulusTask.cpp  StimulusTask.h
src/private/Application/Communication_task_dual/: CMakeLists.txt  Communication_task_dualTask.cpp  Communication_task_dualTask.h  Slider.cpp  Slider.h
src/private/Application/CursorTaskWithGauges/: CMakeLists.txt
src/private/Application/EglyDriverTask/: CMakeLists.txt  EglyDriverTask.cpp  EglyDriverTask.h
src/private/Application/Games/: CMakeLists.txt  CircleObject.cpp  CircleObject.h  RectangleObject.h  RenderObject.h  ThemeManager.h
src/private/Application/GaugesOnly/: CMakeLists.txt  GaugesOnly.cpp
src/private/Application/KastnerCueingTask/: CMakeLists.txt  KastnerCueingTask.cpp  KastnerCueingTask.h  KastnerCueingTask_Intro.bat  KastnerCueingTask_Test.bat
src/private/Application/LisaMemycFilter/: CMakeLists.txt  LisaMemycFilter.h
src/private/Application/NeurofeedbackTask/: CMakeLists.txt  NeurofeedbackTaskFilter.cpp  NeurofeedbackTaskFilter.h
src/private/Application/PacManTask/: Read_Me.txt
src/private/Application/ReactionAuditoryCalibrationTask/: CMakeLists.txt  ReactionAuditoryCalibrationTask.cpp  ReactionAuditoryCalibrationTask.h
src/private/Application/ReactionAuditoryTask/: CMakeLists.txt  ReactionAuditoryTask.cpp
src/private/Application/ReactionTask/: CMakeLists.txt  ReactionTaskFilter.cpp  ReactionTaskFilter.h
src/private/Application/ReactionTimeVisualPerceptionTask/: CMakeLists.txt  ReactionTimeVisualPerceptionTask.cpp  ReactionTimeVisualPerceptionTask.h
src/private/Application/ReactionVisualCalibrationTask/: CMakeLists.txt  ReactionVisualCalibrationTask.cpp  ReactionVisualCalibrationTask.h  ReactionVisualCalibrationTask_safety.cpp  ReactionVisualCalibrationTask_safety.h
src/private/Application/SpaceInvaderApp/: CMakeLists.txt  SpaceInvaderTask.cpp  SpaceInvaderTask.h
src/private/Application/SpatialWorkingMemoryGT/: CMakeLists.txt  SpatialWorkingMemoryGTTask.cpp  SpatialWorkingMemoryGTTask.h
src/private/Application/VibrationHabituation/: CMakeLists.txt  VibrationHabituationTask.cpp  VibrationHabituationTask.h
src/private/Application_oldV2/CursorTaskMod/: CursorFeedbackTaskMod.cpp  FeedbackScene2D.cpp  FeedbackScene3D.cpp  FeedbackScene3D.h
src/private/Application_oldV2/CursorTaskWithGauges/: AnalogGauge.cpp  AnalogGauge.h  BarGauge.cpp  BarGauge.h  BarPlotGauge.cpp  BarPlotGauge.h  CursorFeedbackTaskMod.cpp  CursorFeedbackTaskMod.h  CursorTaskWithGaugesMain.cpp  CursorTaskWithGaugesMain.h  FeedbackScene.h  FeedbackScene2D.h  Gauge.cpp  Gauge.h  GaugeAppMain.cpp  GenericStimulusTask.cpp  GenericStimulusTask.h  PipeDefinition.cpp  Scale.cpp  ScrollingHistoryGauge.cpp  XYGauge.cpp  XYGauge.h
src/private/Application_oldV2/GaugeApp/: AnalogGauge.cpp  GaugeAppMain.cpp  GaugeAppMain.h  GenericStimulusTask.cpp  HistoryGauge.cpp  HistoryGauge.h  Scale.h  ScrollingHistoryGauge.h
src/private/Application_oldV2/P3SpellerFixationMod/: P3SpellerTask_Fixation_Mod.cpp  P3SpellerTask_Fixation_Mod.h
src/private/Application_oldV2/PPJoyAppConnector/: main.cpp
src/private/Application_oldV2/TickerTask/: TextField.cpp  TextField.h  TickerTask.cpp  TickerTask.h
src/private/Extensions/: CMakeLists.txt
src/private/Extensions/AudioInputFilter/: AudioInput.cpp  AudioInput.h  AudioInputFilter.cpp  AudioInputFilter.h  IncludeExtension.cmake
src/private/Extensions/BioPacLogger/: BioPacInputLogger.cpp  BioPacInputLogger.h  IncludeExtension.cmake
src/private/Extensions/GaugeExtension/: Gauge.cpp  Gauge.h  GaugeApp.cpp  GaugeApp.h  IncludeExtension.cmake
src/private/Extensions/WebcamLogger2/: IncludeExtension.cmake  WebcamClient.h  WebcamController.cpp  WebcamController.h  WebcamLogger.cpp  WebcamLogger.h
src/private/Extensions/gEstimFilter/: IncludeExtension.cmake  gEstimFilter.cpp  gEstimFilter.h
src/private/SignalProcessing/: CMakeLists.txt
src/private/SignalProcessing/ARSignalProcessing_Hijacked/: ARSignalProcessing.cpp  CustomIIR.cpp  CustomIIR.h  ExperimentalNormalizer.cpp  ExperimentalNormalizer.h  HijackFilter.cpp  HijackFilter.h  LogFilter.cpp  LogFilter.h  PairwiseCouplingFilter.cpp  PairwiseCouplingFilter.h  PipeDefinition.cpp
src/private/SignalProcessing/CP2130/: CMakeLists.txt  CP2130Filter.cpp  CP2130Filter.h
src/private/SignalProcessing/CorTecFilter/: CMakeLists.txt  CorTecFilter.cpp  CorTecFilter.h  PipeDefinition.cpp  README.txt
src/private/SignalProcessing/IIRFilterBankSignalProcessing/: CMakeLists.txt  HilbertFilter.h  IIRFilterBank.cpp  IIRFilterBank.h  PipeDefinition.cpp
src/private/SignalProcessing/LisaMemycFilter/: LisaMemycFilter.cpp  PipeDefinition.cpp
src/private/SignalProcessing/NeuroFeedbackSignalProcessing/: CMakeLists.txt  HilbertFilter.cpp  (+3 more)
src/private/SignalSource/: CMakeLists.txt
src/private/SuperStimulusPresentation/: CMakeLists.txt  SuperStimulusPresentation.bat  SuperStimulusPresentationTask.cpp  SuperStimulusPresentationTask.h  VideoStimulus.cpp  VideoStimulus.h
src/private/licensing/: header.txt
src/private/tmp/: Normalizer.cpp  Normalizer.h
src/private/tools/: CMakeLists.txt
(+663 files in other folders)
